--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2125,21 +2125,7 @@
    "source": [
     "# Correlation thoughts\n",
     "\n",
-    "- It's weird that total_ columns are ideally correlated. IMO that's related to synthetic data generation\n",
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Preliminary insights\n",
-    "\n",
-    "So, now we know:\n",
-    "\n",
-    "- top brands by sales\n",
-    "- top regions for our and rivaling brands\n",
-    "- top gainers/losers among brands AND top gainers/losers among our regions (need to deduce why + *add top sales' regions*)"
+    "- It's weird that total_ columns are ideally correlated. IMO that's related to synthetic data generation"
    ]
   },
   {
@@ -2173,11 +2159,6 @@
    "source": [
     "# Top regions and top brands"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
